# Argus

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  argus-osint-setup.md
argus/: .env.example  argus.db  config.py  database.py  main.py  models.py  monitor_scheduler.py  requirements.txt
argus/api/: app.py  deps.py
argus/api/routes/: investigations.py  monitors.py  users.py
argus/bot/: main.py
argus/bot/handlers/: investigate.py  results.py  start.py
argus/plugins/: http_plugin.py  phone_plugin.py  redirect_chain_plugin.py  runner.py  templates.py
argus/static/: index.html
artifacts/api-server/.replit-artifact/: artifact.toml
tests/: conftest.py
