[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.29.0",
    "aiohttp>=3.14.1",
    "aiosqlite>=0.22.1",
    "dnspython>=2.8.0",
    "fastapi>=0.138.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-whois>=0.9.6",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
